# hipdf

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json  release.config.cjs
.github/workflows/: release.yml
src/: blocks.rs  embed_pdf.rs  hatching.rs  lib.rs  ocg.rs
tests/: blocks_integration_test.rs  embed_pdf_integration_test.rs  hatching_integration_test.rs  ocg_integration_test.rs
