[package]
name = "hipdf"
version = "0.1.0"
edition = "2021"
description = "A high-level PDF manipulation library built on lopdf"
license = "MIT"
repository = "https://github.com/jorgesoares/hipdf"
keywords = ["pdf", "lopdf", "layers", "ocg", "manipulation"]
categories = ["multimedia", "api-bindings"]

[lib]
name = "hipdf"
path = "src/lib.rs"

[dependencies]
lopdf = "0.38.0"

[dev-dependencies]

[features]
default = []

# Workspace configuration for testing
[workspace]
members = []

# Development scripts can be run with `cargo run --bin script_name`
[build-dependencies]

# Test configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps]
ignore = ["lopdf"]
