[package]
name = "hipdf"
version = "0.1.0"
edition = "2021"
authors = ["Jorge Soares <jorge@ducflair.com>"]
description = "A high-level PDF manipulation library built on lopdf"
license = "MIT"
repository = "https://github.com/ducflair/hipdf"
keywords = ["pdf", "lopdf", "layers", "ocg", "manipulation"]
categories = ["multimedia", "api-bindings"]
readme = "README.md"

[lib]
name = "hipdf"
path = "src/lib.rs"

[dependencies]
lopdf = "0.38.0"

[dev-dependencies]

[features]
default = []

# Test configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
